change domain for new deployment

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/tshiil_logo_small.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:url" content="https://tshiil.omaratri.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TSHIIL | Facilite Votre vie" />
+    <meta
+      property="og:description"
+      content="Une société tunisienne qui propose des divers services qui visent à faciliter la vie de tout un chacun, particuliers comme professionnels"
+    />
+    <meta property="og:image" content="https://tshiil.omaratri.com/opengraph-image.jpg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
