Capitalize og:title

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:url" content="https://tshiil.omaratri.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="TSHIIL | Facilite Votre vie" />
+    <meta property="og:title" content="TSHIIL | Facilite Votre Vie" />
     <meta
       property="og:description"
       content="Une société tunisienne qui propose des divers services qui visent à faciliter la vie de tout un chacun, particuliers comme professionnels"
